# gitguru-v2-backend

./: .env.example  .gitignore  Dockerfile  Dockerfile.pmd  README.md  compose.yaml  pyproject.toml
.github/workflows/: build.yml
src/: main.py
src/app/: actions.py  dataloaders.py  functions.py  models.py  routes.py
src/goap/: core.py  llm.py
src/linter/: .mega-linter.yml  mega.py  pmd.py
src/sast/: __init__.py  ex.py  identifier.py  lint.py  readme.md  searxng.py  semgrep.py
