[project]
name = "gitguru-v2-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "hdbscan (>=0.8.40,<0.9.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "openai (>=1.63.2,<2.0.0)",
    "semgrep (>=1.109.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" }
]
